# holonomy_lib

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTENTS.md  CONVENTIONS.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notes/: benchmark_2026-05-26_roadmap_sweep.md  benchmark_baseline.json  benchmark_baseline.md  benchmark_info_geometry.json  benchmark_info_geometry.md  benchmark_optimized.json  benchmark_optimized.md  benchmark_provenance_v0.2.json  benchmark_provenance_v0.2.md  benchmark_provenance_v0.3.json  benchmark_provenance_v0.3.md  magic_numbers.md  research_claims_catalog.md  research_open_questions.md  scrutiny.md  substrate_provenance.md
notes/paper/: main.tex  neurips_2024.sty  references.bib
notes/strengthening/: C1_C2_heat_kernel_bench.py  C1_C2_heat_kernel_bench_results.md  C1_C2_heat_kernel_strengthened.md  C3_arcsinh_strengthened.md  C3_arcsinh_worked_example.py  C3_arcsinh_worked_example_results.md  C4_kappa_crossing_gpu_bench.py  C4_kappa_crossing_strengthened.md  C4_kappa_crossing_stress.py  C4_kappa_crossing_stress_results.md  C5_C6_heterogeneous_kappa_strengthened.md  C5_C6_synthetic_task.py  C5_C6_synthetic_task_results.md  C7_validation_methodology_strengthened.md  gpu_scaling_bench.py  gpu_scaling_results.md
notes/validation/: autograd_safe_results.md  autograd_safe_vs_geoopt.py  cross_manifold_results.md  cross_manifold_validation.py  findings_summary.md  frechet_spherical_results.md  frechet_spherical_validation.py  graph_heat_kernel_results.md  graph_heat_kernel_validation.py  heat_kernel_crank_nicolson.py  heat_kernel_crank_nicolson_results.md  heat_kernel_findings.md  heat_kernel_results.md  heat_kernel_validation.py  spectral_dimension_results.md  spectral_dimension_validation.py
notes/verification/: arcsinh_reparam_sympy.py  heat_kernel_n5_sympy.py  heat_kernel_n7_sympy.py  heat_kernel_recursion_sympy.py  kappa_crossing_sympy.py
src/holonomy_lib/: __init__.py  _graph_utils.py  audit.py
src/holonomy_lib/algebra/: __init__.py  lanczos.py  linear.py
src/holonomy_lib/discrete_geometry/: __init__.py  forman.py  ricci.py
src/holonomy_lib/hyperbolic/: __init__.py  frechet_mean.py  heat_kernel.py  laplacian_eigenmaps.py  manifold_inner.py
src/holonomy_lib/info_geometry/: __init__.py  divergences.py  fisher.py
src/holonomy_lib/lie/: __init__.py  so3.py  spherical_harmonics.py
src/holonomy_lib/manifolds/: __init__.py  comparison.py  fixed_rank.py  heterogeneous_kappa.py  lorentz.py  lorentzian.py  product.py  spd.py  stereographic.py
src/holonomy_lib/optimization/: __init__.py  base.py  sgd.py
src/holonomy_lib/provenance/: __init__.py  agent.py  jupyter.py  mcp.py  protocol.py
src/holonomy_lib/sheaf/: __init__.py  graph_sheaf.py  laplacian.py
src/holonomy_lib/simplicial/: __init__.py  _face_lookup.py  complex.py  sparse_complex.py  vietoris_rips.py
src/holonomy_lib/spectral/: __init__.py  diffusion_map.py  effective_resistance.py  embedding.py  heat_kernel.py  laplacian.py  magnetic.py  spectral_dimension.py
src/holonomy_lib/tensor_calculus/: __init__.py  decomposition.py
src/holonomy_lib/topology/: __init__.py  _filtration.py  _reduction.py  hodge.py  persistent_homology.py
src/synoros_lib/: __init__.py  audit.py
src/synoros_lib/algebra/: __init__.py  linear.py
src/synoros_lib/discrete_geometry/: __init__.py  ricci.py
src/synoros_lib/manifolds/: __init__.py  fixed_rank.py  spd.py
src/synoros_lib/provenance/: __init__.py  protocol.py
src/synoros_lib/spectral/: __init__.py  embedding.py  laplacian.py
src/synoros_lib/tensor_calculus/: __init__.py  decomposition.py
tests/: test_audit.py  test_conventions.py  test_device_parity.py
tests/algebra/: test_lanczos.py  test_linear.py
tests/benchmarks/: bench_algebra.py  bench_discrete_geometry.py  bench_hyperbolic.py  bench_info_geometry.py  bench_manifolds.py  bench_provenance.py  bench_spectral.py  bench_tensor_calculus.py  bench_topology.py  harness.py  run.py
tests/discrete_geometry/: test_forman.py  test_ricci.py  test_ricci_flow.py
tests/hyperbolic/: test_frechet_mean.py  test_heat_kernel.py  test_laplacian_eigenmaps.py  test_manifold_inner.py
tests/info_geometry/: __init__.py  test_divergences.py  test_fisher.py
tests/lie/: test_so3.py  test_spherical_harmonics.py
tests/manifolds/: test_comparison.py  test_fixed_rank.py  test_heterogeneous_kappa.py  test_lorentz.py  test_lorentzian.py  test_product.py  test_spd.py  test_stereographic.py
tests/optimization/: test_sgd.py
tests/provenance/: test_agent.py  test_class_method.py  test_jupyter.py  test_mcp.py  test_protocol.py
tests/research_baselines/: __init__.py  graphmore_discrete.py
tests/sheaf/: test_graph_sheaf.py  test_heterogeneous_graph_sheaf.py
tests/simplicial/: test_complex.py
tests/spectral/: test_diffusion_map.py  test_effective_resistance.py  test_embedding.py  test_heat_kernel.py  test_laplacian.py  test_magnetic.py  test_sparse_laplacian.py  test_spectral_dimension.py
tests/tensor_calculus/: test_decomposition.py
tests/topology/: test_hodge.py  test_persistent_homology.py  test_reduction_backends.py
