[project]
name = "holonomy-lib"
version = "0.1.0"
description = "Research-grade PyTorch math: differential geometry, spectral graph theory, discrete Ricci flow, tensor decompositions, content-addressable provenance. GPU-native, batched-first, audit-clean, cited."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jack" }]
requires-python = ">=3.12"
keywords = [
    "pytorch",
    "differential-geometry",
    "riemannian-manifolds",
    "spectral-graph-theory",
    "ricci-flow",
    "ollivier-ricci-curvature",
    "tensor-decomposition",
    "hosvd",
    "optimal-transport",
    "sinkhorn",
    "mechanistic-interpretability",
    "provenance",
    "merkle-dag",
    "numerical-linear-algebra",
    "gpu-computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/superninjv/holonomy_lib"
Repository = "https://github.com/superninjv/holonomy_lib"
Issues = "https://github.com/superninjv/holonomy_lib/issues"

# torch is intentionally NOT in dependencies. Install platform-appropriate
# wheel manually — uv's resolver tends to prefer PyPI CUDA-13 wheels even
# when ROCm is configured.
#   Workstation (AMD gfx1200 / 9060 XT):
#     uv pip install --index-url https://download.pytorch.org/whl/rocm6.4 torch
#   NVIDIA CUDA 12+:
#     uv pip install torch
#   CPU only:
#     uv pip install torch

[project.optional-dependencies]
# External math libs we wrap or consolidate from
geometry = ["geoopt", "geomstats", "pymanopt", "autograd"]
topology = ["gudhi", "ripser"]
optimization = ["higher", "torchopt"]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
