[project]
name = "holonomy-lib"
version = "0.1.0"
description = "Research-grade PyTorch math: differential geometry, spectral graph theory, discrete Ricci flow, tensor decompositions, simplicial topology, persistent homology, content-addressable provenance. GPU-native, batched-first, audit-clean, cited."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jack" }]
requires-python = ">=3.12"
keywords = [
    "pytorch",
    "differential-geometry",
    "riemannian-manifolds",
    "spectral-graph-theory",
    "ricci-flow",
    "ollivier-ricci-curvature",
    "forman-ricci-curvature",
    "magnetic-laplacian",
    "directed-graphs",
    "graph-signal-processing",
    "heat-kernel",
    "diffusion-maps",
    "effective-resistance",
    "lanczos",
    "information-geometry",
    "bregman-divergence",
    "kl-divergence",
    "tensor-decomposition",
    "hosvd",
    "optimal-transport",
    "sinkhorn",
    "mechanistic-interpretability",
    "provenance",
    "merkle-dag",
    "numerical-linear-algebra",
    "gpu-computing",
    "persistent-homology",
    "simplicial-complex",
    "topological-data-analysis",
    "riemannian-optimization",
    "hodge-laplacian",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Runtime dependencies. `torch >= 2.0` is included for ergonomic
# `pip install holonomy-lib` on CPU and the default CUDA wheel.
# ROCm users: install your own torch wheel BEFORE `pip install
# holonomy-lib`, or use `--force-reinstall` after, e.g.:
#   pip install --index-url https://download.pytorch.org/whl/rocm6.4 torch
#   pip install holonomy-lib
# pip / uv will respect the already-installed torch.
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/superninjv/holonomy_lib"
Repository = "https://github.com/superninjv/holonomy_lib"
Issues = "https://github.com/superninjv/holonomy_lib/issues"

[project.optional-dependencies]
# Runtime extras for the optional provenance helpers. The library
# uses these only inside specific methods:
#   - `blake3`: ~5-10x faster than sha256 for the provenance hash
#     computation. Falls back to sha256 if not installed.
#   - `networkx`: used by `ProvenanceRegistry.to_networkx()`.
#   - `pandas`: used by `ProvenanceRegistry.to_dataframe()`.
# Skip this extra if you don't need mech-interp DAG exports.
provenance-extras = ["blake3", "networkx", "pandas"]

# Comparison-test extras: third-party libraries we cross-check
# implementations against (pymanopt, geoopt for manifolds; tensorly
# for HOSVD; gudhi, ripser for persistent homology; GraphRicciCurvature
# for Ollivier-Ricci; networkx as a graph-data-structure peer). These
# are NOT runtime dependencies — the comparison tests use
# `pytest.importorskip` and silently skip when the comparison lib
# isn't installed. Install this extra ONLY if you want to run the
# full cross-comparison test suite locally.
comparison = [
    "pymanopt",
    "geoopt",
    "geomstats",
    "autograd",
    "tensorly",
    "networkx",
    "gudhi",
    "ripser",
    "GraphRicciCurvature",
]

# Development toolchain.
dev = ["pytest", "ruff", "mypy"]

# Convenience extras: everything.
all = [
    "blake3",
    "networkx",
    "pandas",
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
